Fix white space behind footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,5 @@
   background-color: black;
   width: 100%;
   margin: 0;
-  height: 100vh;
-}
-
-#app {
+  height: 100%;
 }
