--- a/client/src/components/DrinkDetails/DrinkDetails.css
+++ b/client/src/components/DrinkDetails/DrinkDetails.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   /* background-color: #a30707be; */
   border-radius: 25px;
-  height: 400px;
   background-color: maroon;
   margin-top: 30px;
   margin-bottom: 100px;
